Fix CSS for card sizing/spacing issue.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,10 +56,18 @@ main {
 
 footer {
   grid-area: footer;
+  margin: 10px;
+  font-size: 16px;
+  color: #fff;
+  text-shadow: 2px 2px black;
 }
 
 h1 {
   font-size: 3.6rem;
+}
+
+.btn {
+  font-size: 12px
 }
 
 .navbar-light .navbar-brand {
@@ -114,13 +122,11 @@ h1 {
 .card-img-top {
   box-shadow: 0 5px 10px rgba(0,0,0,0.5);
   height: 225px;
-  width: 348px;
 }
 
 .card-body {
   text-align: center;
   box-shadow: 0px 15px 15px -8px rgba(0,0,0,0.5);
-  width: 348px;
 }
 
 .card-body h6 {
@@ -133,11 +139,6 @@ h1 {
   font-weight: bold;
   font-size: 1.75rem;
   color: #022304;
-}
-
-#indexCard {
-  width: 348px;
-  margin-right: 10px;
 }
 
 #newCourseCard {
@@ -252,15 +253,4 @@ h1 {
   border-radius: 50%;
   background-color: rbga(0, 0, 0, 100);
   padding: 0 0 0 0;
-}
-
-.btn {
-  font-size: 12px
-}
-
-footer {
-  margin: 10px;
-  font-size: 16px;
-  color: #fff;
-  text-shadow: 2px 2px black; 
 }
